aks-test-webapp-k8s-templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-test-webapp-service
  labels:
    app: aks-test-webapp
spec:
  selector:
    app: aks-test-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP # Internal service, exposed externally by Ingress
