aks-test-webapp-k8s-templates/network-policy-default-deny.yaml
# By defasult block all ingress traffic
# Though for this test app we can have one network policy, in general we should have one default deny policy
# so that all ingress is blocked, except another explicit network policy allows ingress traffic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
